Added support for query post processing to BatchSearch.